<resources>
    <string name="app_name">Smart PG</string>
    <string name="pager_bullet_separator" formatted="false">%s / %s</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="nav_home">Home</string>
    <string name="nav_photos">Photos</string>
    <string name="nav_movies">Movies</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>

    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Photos</item>
        <item>Movies</item>
        <item>Notifications</item>
        <item>Settings</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="nav_study">Read Book</string>
    <string name="nav_test">Online Test</string>
    <string name="nav_mcq">Past Questions</string>
    <string name="nav_revision">Revision</string>
    <string name="nav_leaderboard">Leaderboard</string>
    <string name="nav_my_profile">My Profile</string>
    <string name="nav_contribution">Contribution</string>
    <string name="nav_discussion">Discussion</string>
    <string name="nav_log_out">Log Out</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="required">*Required</string>
    <string name="invalidEmailError">Invalid Email</string>
    <string name="notsamepassword">Passwords not same</string>
</resources>
